# pyaq

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml
aq/: __init__.py  __main__.py  broker.py  containers.py
aq/activities/: __init__.py  activity.py  extract.py  function.py  generate.py  merge.py  read.py  retrieve.py  store.py  summarize.py  write.py
aq/activities/readers/: __init__.py  file.py  image.py  pdf.py  reader.py  yaml.py
aq/http_client/: __init__.py  async_http_client.py
aq/jobs/: __init__.py  manager.py  scheduler.py
aq/memory/: __init__.py  manager.py  repository.py  splitter.py
aq/memory/chromadb/: __init__.py  repository.py
aq/providers/: __init__.py  manager.py  provider.py
aq/providers/anthropic/: __init__.py  provider.py
aq/providers/azure/: __init__.py  provider.py
aq/providers/gemini/: __init__.py  provider.py
aq/providers/llava/: __init__.py  provider.py
aq/providers/openai/: __init__.py  provider.py
aq/providers/types/: __init__.py  chat.py
aq/tools/: __init__.py  manager.py  tool.py
aq/tools/news/: __init__.py  news_tool.py
aq/tools/rest/: __init__.py  rest_tool.py
aq/tools/web/: __init__.py  web_tool.py
aq/types/: __init__.py  app.py  job.py
docs/: README.md
examples/: examples.ipynb
examples/apps/: accident_report.yml  companies.yml  enrich.yml  extract.yml  investments.yml  meaning_of_life.yml  metacode.yml  prospecting.yml  qna.yml  rag.yml
examples/files/: assignment.txt  contacts.json  email.txt  meaning_of_life.txt  prospecting.json  question.txt  questions.json
