[tool.poetry]
name = "pyaq"
version = "0.1.0"
description = "AnyQuest Semantic Broker"
license="MIT"
authors = ["Dmitri Tcherevik <dmitri@anyquest.ai>"]
readme = "README.md"
packages = [
    { include = "aq" }
]
repository = "https://www.github.com/anyquest/pyaq"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
chromadb = "^0.4.18"
dependency-injector = "^4.41.0"
jsonpath-ng = "^1.6.0"
jinja2 = "^3.1.2"
pypdf = "^3.17.1"
aiofiles = "^23.2.1"
markdown = "^3.5.1"
httpx = "^0.25.2"
bs4 = "^0.0.1"
cryptography = "^41.0.5"
openapi3-parser = "^1.1.14"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
